--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,13 +15,10 @@
     "baseUrl": "./",
     "types": ["webpack-env"],
     "paths": {
-      "*": ["types/*"]
+      "@/*": [
+        "src/*"
+      ]
     },
-    // "paths": {
-    //   "@/*": [
-    //     "src/*"
-    //   ]
-    // },
     "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   },
   "include": [
