--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "babel-plugin-import": "^1.13.3",
     "core-js": "^3.6.5",
+    "dayjs": "^1.10.7",
     "easemob-websdk": "^4.0.1",
     "vant": "3",
     "vue": "^3.0.0",
