--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vant": "3",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
+    "vue-contenteditable": "^3.0.4",
     "vue-router": "4",
     "vuex": "^4.0.0"
   },
